examples/simple/undefined/UB-CB3-bad.c
// Copyright (c) 2015 Runtime Verification, Inc. All Rights Reserved.

int foo(a)
int a;
{
	return 0;
}

int main(void){
	foo(5, 6);
}
